# spherical

./: CHANGELOG.md  LICENSE  README.md  cabal.project.local  spherical.cabal
src/Math/Geometry/: Spherical.hs
